Nu .toList ipv .collect(Collectors.toList()).